fix dashboard para in a card and alignment

--- a/src/components/dashboard/css/Home.css
+++ b/src/components/dashboard/css/Home.css
@@ -646,8 +646,8 @@ color: #4285F8;
   .foralinkscsshere{
     font-family: 'Roboto';
 font-style: normal;
-font-weight: 700;
-font-size: 21px;
+font-weight: 500;
+font-size: 19px;
 line-height: 25px;
 color: #4285F8;
   }
